# Dehaze

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo.py  main  main.cpp  run.txt
DUMP/: val.txt  valcrops.txt
Middlebury_Haze/: construct_middlebury_depthmap.m  patchOcclusions.m
Middlebury_Haze/heterogeneous_haze/: README.txt  demo_metrics.m  demo_simu_haze.m  simu_haze_midd.m
Outdoor/: Old_README.txt  demo_simu_haze.m  depth_linreg_interp.py  depthstats.m  dynamic_range.py  fourchannel_io.txt  generate_regression_data.m  induce_haze_NRB.m  scene_beta.txt  scene_depth.txt  scene_linreg.txt
Outdoor/crops4c/: IMG_7033_10_0.npz  IMG_7033_10_1.npz  IMG_7033_10_2.npz  IMG_7033_10_3.npz  IMG_7033_10_4.npz  IMG_7033_11_0.npz  IMG_7033_11_1.npz  IMG_7033_11_2.npz  IMG_7033_11_3.npz  IMG_7033_11_4.npz  IMG_7033_12_3.npz  IMG_7033_12_4.npz  IMG_7033_13_0.npz  IMG_7033_13_1.npz  IMG_7033_13_2.npz  IMG_7033_13_3.npz  IMG_7033_13_4.npz  IMG_7033_14_0.npz  IMG_7033_14_1.npz  IMG_7033_14_2.npz  IMG_7033_14_3.npz  IMG_7033_14_4.npz  IMG_7033_15_0.npz  IMG_7033_15_1.npz  IMG_7033_15_2.npz  IMG_7033_15_3.npz  IMG_7033_15_4.npz  IMG_7033_16_0.npz  IMG_7033_16_1.npz  IMG_7033_16_2.npz  IMG_7033_16_4.npz  IMG_7033_17_0.npz  IMG_7033_17_2.npz  (+1725 more)
Parameter_Fitting/: extract_avg_depth.py  generate_crops_v2.py  preddmap2.txt  preddmap_30epochs.txt  preddmap_HAZERD_5cycle3.txt  regression2.py  regression2_gen.py  regression_4c.py  regression_outdoor.py
Python/:  model.txt  contrast.py  depth.py  display.py  haze.py  psnr.py  regression2_gen-3.py  solve.py
(+45 files in other folders)
