set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11" )
cmake_minimum_required(VERSION 2.8)
project( main )
find_package( OpenCV REQUIRED )
find_package( GSL REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( ${GSL_INCLUDE_DIRS} )
add_executable( main main.cpp )
target_link_libraries( main ${OpenCV_LIBS} )
target_link_libraries( main ${GSL_LIBS} )
